--- a/index.html
+++ b/index.html
@@ -61,9 +61,10 @@
                         <thead>
                             <tr>
                                 <th>Date</th>
-                                <th>Home Team</th>
-                                <th>Away Team</th>
+                                <th>Match</th>
                                 <th>Result</th>
+                                <th>Scores</th>
+                                <th>Box Score</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -410,7 +411,7 @@
     <script>
 
         async function fetchScheduleData() {
-            const response = await fetch('https://raw.githubusercontent.com/widbuntu/vbdb-info/refs/heads/main/data/test_sch.csv');
+            const response = await fetch('https://raw.githubusercontent.com/widbuntu/vbdb-info/refs/heads/main/data/live.csv');
             const csvText = await response.text();
 
             // Ensure that the CSV is being split into rows correctly
