--- a/index.html
+++ b/index.html
@@ -56,7 +56,24 @@
             <!-- Live tab -->
             <div class="tab-pane fade" id="live" role="tabpanel" aria-labelledby="live-tab">
                 <h2 class="text-center">Live Scores</h2>
-                <div class="table-responsive">
+                <!-- Dropdown for Searchs -->
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-auto mb-3">
+                            <select class="form-select form-select-lg" name="conference-live-dropdown"
+                                id="conference-live-dropdown">
+                                <option value="Conference">Conference</option>
+                            </select>
+                        </div>
+                        <div class="col-auto mb-3">
+                            <select class="form-select form-select-lg" name="teams-live-dropdown"
+                                id="teams-live-dropdown">
+                                <option selected>School</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+                <div class="table-responsive" style="overflow-x: auto;">
                     <table id="liveTable" class="table table-dark table-hover table-striped">
                         <thead>
                             <tr>
@@ -195,7 +212,7 @@
             dataRows.forEach(row => {
                 const fields = splitLine(row); // Use splitLine to correctly parse each row
 
-                if (fields.length >= 7) { // Ensure we have all required columns
+                if (fields.length >= 6) { // Ensure we have all required columns
                     const conferenceName = fields[1]; // Full conference name (column index 2)
                     const teamShort = fields[5]; // team_short (column index 5)
 
@@ -292,7 +309,9 @@
         function populateScheduleTable(data) {
             const tbody = document.querySelector('#schTable tbody');
             tbody.innerHTML = ''; // Clear existing rows
-
+            data.sort((a, b) => {
+                return new Date(a.date) - new Date(b.date); // Sort in ascending order
+            });
             // Insert each row into the table
             data.forEach(row => {
                 const rowElement = document.createElement('tr');
@@ -301,7 +320,7 @@
                 <td>${row.match.trim()}</td>
                 <td>${row.result.trim()}</td>
                 <td>${row.scores.trim()}</td>
-                <td>${row.box_score_url.trim()}</td>
+                <td><a href="${row.box_score_url.trim()}" target="_blank">View</a></td>
             `;
                 tbody.appendChild(rowElement);
             });
@@ -409,51 +428,56 @@
 
     <!-- Script to run live tab -->
     <script>
+        let liveData = []; // Array to hold the live data
 
-        async function fetchScheduleData() {
+        async function fetchLiveData() {
             const response = await fetch('https://raw.githubusercontent.com/widbuntu/vbdb-info/refs/heads/main/data/live.csv');
             const csvText = await response.text();
 
-            // Ensure that the CSV is being split into rows correctly
-            const rows = csvText.split('\n').filter(row => row.trim() !== ''); // Exclude empty lines
-            const dataRows = rows.slice(1); // Data rows (ignoring the header)
+            // Split into rows and filter out empty lines
+            const rows = csvText.split('\n').filter(row => row.trim() !== '');
+            const dataRows = rows.slice(1); // Ignore the header row
 
-            // Check if the splitLine function correctly parses each row
-            scheduleData = dataRows.map(row => {
-                const fields = splitLine(row);
+            // Parse each row into an object
+            liveData = dataRows.map(row => {
+                const fields = row.split(','); // Split by comma
                 return {
                     date: fields[0] || '',
                     match: fields[1] || '',
                     result: fields[2] || '',
                     scores: fields[3] || '',
-                    box_score_url: fields[4] || ''
+                    box_score_url: fields[4] || '',
                 };
             });
 
-            // Check if data has been parsed correctly by logging it
-            console.log('Schedule Data:', scheduleData);
+            // Log the parsed data for debugging
+            console.log('Live Data:', liveData);
 
-            // Initially populate the table with all data
-            populateScheduleTable(scheduleData);
+            // Populate the table with the fetched data
+            populateLiveTable(liveData);
         }
 
-        function populateScheduleTable(data) {
-            const tbody = document.querySelector('#schTable tbody');
+        // Function to populate the live scores table
+        function populateLiveTable(data) {
+            const tbody = document.querySelector('#liveTable tbody');
             tbody.innerHTML = ''; // Clear existing rows
 
             // Insert each row into the table
             data.forEach(row => {
                 const rowElement = document.createElement('tr');
                 rowElement.innerHTML = `
-                <td>${row.date.trim()}</td>
-                <td>${row.match.trim()}</td>
-                <td>${row.result.trim()}</td>
-                <td>${row.scores.trim()}</td>
-                <td>${row.box_score_url.trim()}</td>
-            `;
+                    <td>${row.date.trim()}</td>
+                    <td>${row.match.trim()}</td>
+                    <td>${row.result.trim()}</td>
+                    <td>${row.scores.trim()}</td>
+                    <td><a href="${row.box_score_url.trim()}" target="_blank">View</a></td>
+                `;
                 tbody.appendChild(rowElement);
             });
         }
+
+        // Fetch and display live data when the page loads
+        window.onload = fetchLiveData;
     </script>
 
 </body>
