data, ui, style

--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-auto mb-3">
-                            <select class="form-select form-select-lg" name="conference-live-dropdown"
+                            <select class="form-select form-select-sm" name="conference-live-dropdown"
                                 id="conference-live-dropdown">
                                 <option value="Conference">Conference</option>
                             </select>
                         </div>
                         <div class="col-auto mb-3">
-                            <select class="form-select form-select-lg" name="teams-live-dropdown"
+                            <select class="form-select form-select-sm" name="teams-live-dropdown"
                                 id="teams-live-dropdown">
                                 <option selected>School</option>
                             </select>
@@ -99,13 +99,13 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-auto mb-3">
-                            <select class="form-select form-select-lg" name="conference-schedule-dropdown"
+                            <select class="form-select form-select-sm" name="conference-schedule-dropdown"
                                 id="conference-schedule-dropdown">
                                 <option value="Conference">Conference</option>
                             </select>
                         </div>
                         <div class="col-auto mb-3">
-                            <select class="form-select form-select-lg" name="teams-schedule-dropdown"
+                            <select class="form-select form-select-sm" name="teams-schedule-dropdown"
                                 id="teams-schedule-dropdown">
                                 <option selected>School</option>
                             </select>
