--- a/index.html
+++ b/index.html
@@ -161,7 +161,38 @@
             <!-- Rankings tab -->
             <div class="tab-pane fade" id="rankings" role="tabpanel" aria-labelledby="rankings-tab">
                 <h2 class="text-center">Rankings Content</h2>
-                <p>This is the content for the Rankings tab.</p>
+                <div class="table-responsive" style="overflow-x: auto;">
+                    <table id="schTable" class="table table-dark table-hover table-striped w-100">
+                        <thead>
+                            <tr>
+                                <th>RPI</th>
+                                <th>Team</th>
+                                <th>Conf</th>
+                                <th>RpiPct</th>
+                                <th>W-L</th>
+                                <th>Top25</th>
+                                <th>Top50</th>
+                                <th>Conf</th>
+                                <th>NConf</th>
+                                <th>OppRcrd</th>
+                                <th>SosPct</th>
+                                <th>Rnk</th>
+                                <th>Home</th>
+                                <th>Away</th>
+                                <th>Neut</th>
+                                <th>Tp100</th>
+                                <th>100-2</th>
+                                <th>200-</th>
+                                <th>SetsWon</th>
+                                <th>GdW</th>
+                                <th>BdL</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <!-- CSV Portion -->
+                        </tbody>
+                    </table>
+                </div>
             </div>
 
             <!-- End of content -->
