--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
                 <h2 class="text-center">VBDB Content</h2>
                 <p class="text-center">Welcome to VBDB!</p>
                 <p class="text-center">A focus on D1 NCAA Womens Volleyball!</p>
-                <h2 class="text-center">Data Source</h2>
+                <h2 class="text-center">Data Sources</h2>
                 <p class="text-center">https://stats.ncaa.org</p>
+                <p class="text-center">https://ncaastats.figstats.net/volleyball-rpi.cgi</p>
             </div>
 
             <!-- Live tab -->
@@ -162,7 +163,7 @@
             <div class="tab-pane fade" id="rankings" role="tabpanel" aria-labelledby="rankings-tab">
                 <h2 class="text-center">Rankings Content</h2>
                 <div class="table-responsive" style="overflow-x: auto;">
-                    <table id="schTable" class="table table-dark table-hover table-striped w-100">
+                    <table id="rankingsTable" class="table table-dark table-hover table-striped w-100">
                         <thead>
                             <tr>
                                 <th>RPI</th>
@@ -507,6 +508,131 @@
         // Fetch and display live data when the page loads
         window.onload = fetchLiveData;
     </script>
+
+    <!-- Script to run rankings tab -->
+    <script>
+let rankingsData = []; // Array to hold the live data
+let currentSortColumn = ''; // Keep track of the current sort column
+let isAscending = true; // Keep track of the sort direction
+
+async function fetchRankingData() {
+    try {
+        const response = await fetch('https://raw.githubusercontent.com/widbuntu/vbdb-info/refs/heads/main/data/fig_stats.csv');
+        const csvText = await response.text();
+        const rows = csvText.split('\n').filter(row => row.trim() !== '');
+        const dataRows = rows.slice(1); // Ignore the header row
+        rankingsData = dataRows.map(row => {
+            const fields = row.split(',');
+            return {
+                RPI: fields[0] || '',
+                Team: fields[1] || '',
+                Conf: fields[2] || '',
+                RpiPct: parseFloat(fields[3]) || 0,
+                'W-L': fields[4] || '',
+                Top25: parseInt(fields[5]) || 0,
+                Top50: parseInt(fields[6]) || 0,
+                NonConf: fields[7] || '',
+                OppRcrd: fields[8] || '',
+                SosPct: parseFloat(fields[9]) || 0,
+                Rnk: parseInt(fields[10]) || 0,
+                Home: fields[11] || '',
+                Away: fields[12] || '',
+                Neut: fields[13] || '',
+                Tp100: parseInt(fields[14]) || 0,
+                '100-2': parseInt(fields[15]) || 0,
+                '200-': parseInt(fields[16]) || 0,
+                SetsWon: parseInt(fields[17]) || 0,
+                GdW: parseInt(fields[18]) || 0,
+                BdL: parseInt(fields[19]) || 0
+            };
+        });
+        console.log('Ranking Data:', rankingsData);
+        populateRankingTable(rankingsData);
+        addSortListeners();
+    } catch (error) {
+        console.error('Error fetching ranking data:', error);
+    }
+}
+
+function populateRankingTable(data) {
+    const tbody = document.querySelector('#rankingsTable tbody');
+    tbody.innerHTML = '';
+    data.forEach(row => {
+        const rowElement = document.createElement('tr');
+        rowElement.innerHTML = `
+            <td>${row.RPI}</td>
+            <td>${row.Team}</td>
+            <td>${row.Conf}</td>
+            <td>${row.RpiPct.toFixed(3)}</td>
+            <td>${row['W-L']}</td>
+            <td>${row.Top25}</td>
+            <td>${row.Top50}</td>
+            <td>${row.NonConf}</td>
+            <td>${row.OppRcrd}</td>
+            <td>${row.SosPct.toFixed(3)}</td>
+            <td>${row.Rnk}</td>
+            <td>${row.Home}</td>
+            <td>${row.Away}</td>
+            <td>${row.Neut}</td>
+            <td>${row.Tp100}</td>
+            <td>${row['100-2']}</td>
+            <td>${row['200-']}</td>
+            <td>${row.SetsWon}</td>
+            <td>${row.GdW}</td>
+            <td>${row.BdL}</td>
+        `;
+        tbody.appendChild(rowElement);
+    });
+}
+
+function addSortListeners() {
+    const headers = document.querySelectorAll('#rankingsTable th');
+    headers.forEach((header, index) => {
+        header.addEventListener('click', () => {
+            const column = Object.keys(rankingsData[0])[index];
+            sortTable(column);
+        });
+    });
+}
+
+function sortTable(column) {
+    if (currentSortColumn === column) {
+        // If clicking the same column, reverse the sort order
+        isAscending = !isAscending;
+    } else {
+        // If clicking a new column, set to ascending order
+        isAscending = true;
+    }
+    currentSortColumn = column;
+
+    rankingsData.sort((a, b) => {
+        let aValue = a[column];
+        let bValue = b[column];
+
+        // Special handling for RPI column
+        if (column === 'RPI') {
+            aValue = parseInt(aValue);
+            bValue = parseInt(bValue);
+        }
+
+        if (aValue < bValue) return isAscending ? -1 : 1;
+        if (aValue > bValue) return isAscending ? 1 : -1;
+        return 0;
+    });
+
+    populateRankingTable(rankingsData);
+
+    // Update sort indicators
+    document.querySelectorAll('#rankingsTable th').forEach(th => {
+        th.classList.remove('sort-asc', 'sort-desc');
+    });
+    const currentHeader = document.querySelector(`#rankingsTable th:nth-child(${Object.keys(rankingsData[0]).indexOf(column) + 1})`);
+    currentHeader.classList.add(isAscending ? 'sort-asc' : 'sort-desc');
+}
+
+window.onload = fetchRankingData;
+    </script>
+
 
 </body>
 
