--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <div class="col-auto mb-3">
                             <select class="form-select form-select-sm" name="conference-live-dropdown"
                                 id="conference-live-dropdown">
-                                <option value="Conference">Conference</option>
+                                <option value="">Conference</option>
                             </select>
                         </div>
                     </div>
@@ -550,91 +550,104 @@
 
     <!-- Script to run live tab -->
     <script>
-        let liveData = []; // Array to hold the live data
+        let allData = []; // Store all data globally for filtering
 
-        async function fetchLiveData() {
-            try {
-                const response = await fetch(
-                    "https://raw.githubusercontent.com/widbuntu/vbdb-info/refs/heads/main/data/live.csv"
-                );
-                if (!response.ok) {
-                    throw new Error(`HTTP error! status: ${response.status}`);
-                }
-                const csvText = await response.text();
-                // Split into rows and filter out empty lines
-                const rows = csvText.split("\n").filter((row) => row.trim() !== "");
-                const dataRows = rows.slice(1); // Ignore the header row
-                // Parse each row into an object
-                liveData = dataRows.map((row) => {
-                    const fields = parseCSVRow(row);
-                    return {
-                        date: fields[0] || "",
-                        match: fields[1] || "",
-                        results: fields[2] || "",
-                        box_score_url: fields[3] || "",
-                    };
-                });
-                // Log the parsed data for debugging
-                console.log("Live Data:", liveData);
-                // Populate the table with the fetched data
-                populateLiveTable(liveData);
-            } catch (error) {
-                console.error("Error fetching live data:", error);
-            }
-        }
+        function populateTable(data) {
+            const tableBody = document.querySelector('#liveTable tbody');
+            tableBody.innerHTML = ''; // Clear existing table content
 
-        // Function to parse a CSV row, handling quoted fields correctly
-        function parseCSVRow(row) {
-            const fields = [];
-            let inQuotes = false;
-            let currentField = '';
+            data.forEach(item => {
+                const row = document.createElement('tr');
 
-            for (let i = 0; i < row.length; i++) {
-                if (row[i] === '"') {
-                    inQuotes = !inQuotes;
-                } else if (row[i] === ',' && !inQuotes) {
-                    fields.push(currentField.trim());
-                    currentField = '';
-                } else {
-                    currentField += row[i];
-                }
-            }
-            fields.push(currentField.trim());
+                // Create and populate date cell
+                const dateCell = document.createElement('td');
+                dateCell.textContent = item.date;
+                row.appendChild(dateCell);
 
-            return fields;
-        }
+                // Create and populate match cell
+                const matchCell = document.createElement('td');
+                matchCell.textContent = item.match;
+                row.appendChild(matchCell);
 
-        // Function to populate the live scores table
-        function populateLiveTable(data) {
-            const tbody = document.querySelector("#liveTable tbody");
-            tbody.innerHTML = ""; // Clear existing rows
-            // Insert each row into the table
-            data.forEach((row) => {
-                const rowElement = document.createElement("tr");
-                rowElement.innerHTML = `
-            <td style="width:2%">${row.date}</td>
-            <td style="width:40%">${row.match}</td>
-            <td style="width:25%">${row.results.trim()} <a href="${row.box_score_url.trim()}" target="_blank">View</a></td>
-        `;
-                tbody.appendChild(rowElement);
+                // Create and populate results cell
+                const resultsCell = document.createElement('td');
+                const resultsLink = document.createElement('a');
+                resultsLink.href = item.box_score_url;
+                resultsLink.textContent = item.results;
+                resultsLink.target = '_blank'; // Open link in new tab
+                resultsCell.appendChild(resultsLink);
+                row.appendChild(resultsCell);
+
+                tableBody.appendChild(row);
             });
         }
 
-        // Event listener to handle filtering when the dropdown is changed
-        document.getElementById("conference-live-dropdown").addEventListener("change", function () {
-            const selectedConference = this.value;
-            if (selectedConference === "Conference") {
-                // Show all data if "All Conferences" is selected
-                populateLiveTable(liveData);
-            } else {
-                // Filter data based on the selected conference
-                const filteredData = liveData.filter((row) => row.match.includes(selectedConference));
-                populateLiveTable(filteredData);
-            }
-        });
+        function populateDropdown(data) {
+            const dropdown = document.getElementById('conference-live-dropdown');
+            const conferences = new Set();
 
-        // Fetch and display live data when the page loads
-        document.addEventListener("DOMContentLoaded", fetchLiveData);
+            data.forEach(item => {
+                const match = item.match;
+                const conferenceRegex = /\(([^)]+)\)/g;
+                let match_;
+                while ((match_ = conferenceRegex.exec(match)) !== null) {
+                    conferences.add(match_[1].trim());
+                }
+            });
+
+            // Sort conferences alphabetically
+            const sortedConferences = Array.from(conferences).sort();
+
+            // Clear existing options (except the default one)
+            dropdown.innerHTML = '<option value="">Conference</option>';
+
+            sortedConferences.forEach(conference => {
+                const option = document.createElement('option');
+                option.value = conference;
+                option.textContent = conference;
+                dropdown.appendChild(option);
+            });
+        }
+
+        function filterTable() {
+            const selectedConference = document.getElementById('conference-live-dropdown').value;
+            console.log('Selected conference:', selectedConference); // Check the selected value
+
+            let filteredData;
+
+            if (selectedConference === '') {
+                console.log('No filter, showing all data');
+                filteredData = allData;
+            } else {
+                filteredData = allData.filter(item => item.match.toLowerCase().includes(`(${selectedConference.toLowerCase()})`));
+                console.log('Filtered data:', filteredData); // Check the filtered results
+            }
+
+            populateTable(filteredData);
+        }
+
+        function fetchDataAndPopulate() {
+            fetch('https://test-api-42b6a9daeff2.herokuapp.com/')
+                .then(response => response.json())
+                .then(data => {
+                    allData = data.data; // Store all data globally
+                    populateTable(allData);
+                    populateDropdown(allData);
+                })
+                .catch(error => {
+                    console.error('Error fetching data:', error);
+                    const tableBody = document.querySelector('#liveTable tbody');
+                    tableBody.innerHTML = '<tr><td colspan="3">Error loading data. Please try again later.</td></tr>';
+                });
+        }
+
+        // Call the function to fetch data and populate the table when the page loads
+        document.addEventListener('DOMContentLoaded', () => {
+            fetchDataAndPopulate();
+
+            // Add event listener to the dropdown
+            document.getElementById('conference-live-dropdown').addEventListener('change', filterTable);
+        });
     </script>
 
     <!-- Script to run rankings tab -->
@@ -838,4 +851,5 @@
     </script>
 
 </body>
+
 </html>
