--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <!-- Main -->
     <div class="container mt-5">
+
         <!-- Nav Tabs -->
         <ul class="nav nav-tabs" id="myTab" role="tablist">
             <li class="nav-item" role="presentation">
@@ -48,6 +49,12 @@
                     Rankings
                 </button>
             </li>
+            <li class="nav-item" role="presentation">
+                <button class="nav-link" id="players-tab" data-bs-toggle="tab" data-bs-target="#players" type="button"
+                    role="tab" aria-controls="players" aria-selected="false">
+                    Players
+                </button>
+            </li>
         </ul>
 
         <!-- Main Div for tabs content -->
@@ -56,7 +63,8 @@
             <div class="tab-pane fade show active" id="vbdb" role="tabpanel" aria-labelledby="vbdb-tab">
                 <h2 class="text-center">VBDB Content</h2>
                 <p class="text-center">Welcome to VBDB!</p>
-                <p class="text-center">Scores and Rankings updates for NCAA Division I Women's Volleyball!</p>
+                <p class="text-center">Scores and Rankings updates for NCAA
+                    Division I Women's Volleyball!</p>
                 <hr>
                 <h2 class="text-center">Data Downloads</h2>
                 <p class="text-center"><a style="color: white; text-decoration: underline" target="_blank"
@@ -65,6 +73,10 @@
                 <p class="text-center"><a style="color: white; text-decoration: underline" target="_blank"
                         href="https://raw.githubusercontent.com/widbuntu/vbdb-info/refs/heads/main/data/test_sch.csv">Results</a>
                 </p>
+                <p class="text-center"><a style="color: white; text-decoration: underline" target="_blank"
+                        href="https://raw.githubusercontent.com/widbuntu/vbdb-info/refs/heads/main/data/fig_stats.csv">Rankings</a>
+                </p>
+
                 <hr>
                 <h2 class="text-center">Data Sources</h2>
                 <p class="text-center">https://stats.ncaa.org</p>
@@ -80,7 +92,7 @@
                         <div class="col-auto mb-3">
                             <select class="form-select form-select-sm" name="conference-live-dropdown"
                                 id="conference-live-dropdown">
-                                <option value="">Conference</option>
+                                <option value>Conference</option>
                             </select>
                         </div>
                     </div>
@@ -89,7 +101,6 @@
                     <table id="liveTable" class="table table-dark table-hover table-striped">
                         <thead>
                             <tr>
-                                <th>Date</th>
                                 <th>Match</th>
                                 <th>Results</th>
                             </tr>
@@ -178,13 +189,13 @@
                         <div class="col-auto mb-3">
                             <select class="form-select form-select-sm" name="conference-ranking-dropdown"
                                 id="conference-ranking-dropdown">
-                                <option value="">All Conferences</option>
+                                <option value>All Conferences</option>
                             </select>
                         </div>
                         <div class="col-auto mb-3">
                             <select class="form-select form-select-sm" name="teams-ranking-dropdown"
-                                id="teams-ranking-dropdown" disabled>
-                                <option value="">All Teams</option>
+                                id="teams-ranking-dropdown" disabled hidden>
+                                <option value>All Teams</option>
                             </select>
                         </div>
                     </div>
@@ -216,6 +227,46 @@
                                 <th>SetsWon</th>
                                 <th>GdW</th>
                                 <th>BdL</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <!-- CSV Portion -->
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+
+            <!-- Players tab -->
+            <div class="tab-pane fade" id="players" role="tabpanel" aria-labelledby="players-tab">
+                <h2 class="text-center">Players</h2>
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-auto mb-3">
+                            <select class="form-select form-select-sm" name="conference-players-dropdown"
+                                id="conference-players-dropdown">
+                                <option value>All Conferences</option>
+                            </select>
+                        </div>
+                        <div class="col-auto mb-3">
+                            <select class="form-select form-select-sm" name="teams-players-dropdown"
+                                id="teams-players-dropdown">
+                                <option value>All Teams</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="table-responsive" style="overflow-x: auto">
+                    <table id="playersTable" class="table table-dark table-hover table-striped w-100">
+                        <thead>
+                            <tr>
+                                <th>Number</th>
+                                <th>Name</th>
+                                <th>Class</th>
+                                <th>Position</th>
+                                <th>Height</th>
+                                <th>Hometown</th>
+                                <th>High School</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -291,18 +342,12 @@
             // Populate the conference dropdowns
             const sortedConferenceNames = Array.from(conferenceNames).sort();
             const scheduleDropdown = document.getElementById("conference-schedule-dropdown");
-            const liveDropdown = document.getElementById("conference-live-dropdown");
 
             sortedConferenceNames.forEach((name) => {
-                const option1 = document.createElement("option");
-                option1.value = name;
-                option1.textContent = name;
-                scheduleDropdown.appendChild(option1);
-
-                const option2 = document.createElement("option");
-                option2.value = name;
-                option2.textContent = name;
-                liveDropdown.appendChild(option2);
+                const option = document.createElement("option");
+                option.value = name;
+                option.textContent = name;
+                scheduleDropdown.appendChild(option);
             });
 
             // Call another function to handle team population based on the selected conference (optional)
@@ -551,35 +596,18 @@
 
     <!-- Script to run live tab -->
     <script>
-        let allData = []; // Store all data globally for filtering
+        let allData = []; // Declare allData globally once
 
         function populateTable(data) {
-            const tableBody = document.querySelector('#liveTable tbody');
-            tableBody.innerHTML = ''; // Clear existing table content
-
-            data.forEach(item => {
-                const row = document.createElement('tr');
-
-                // Create and populate date cell
-                const dateCell = document.createElement('td');
-                dateCell.textContent = item.date;
-                row.appendChild(dateCell);
-
-                // Create and populate match cell
-                const matchCell = document.createElement('td');
-                matchCell.textContent = item.match;
-                row.appendChild(matchCell);
-
-                // Create and populate results cell
-                const resultsCell = document.createElement('td');
-                const resultsLink = document.createElement('a');
-                resultsLink.href = item.box_score_url;
-                resultsLink.textContent = item.results;
-                resultsLink.target = '_blank'; // Open link in new tab
-                resultsCell.appendChild(resultsLink);
-                row.appendChild(resultsCell);
-
-                tableBody.appendChild(row);
+            const tbody = document.querySelector("#liveTable tbody");
+            tbody.innerHTML = "";
+            data.forEach((row) => {
+                const rowElement = document.createElement("tr");
+                rowElement.innerHTML = `
+        <td style="width:15%">${row.match.trim()}</td>
+        <td style="width:25%">${row.results.trim()} <a href="${row.box_score_url.trim()}" target="_blank">View</a></td>
+    `;
+                tbody.appendChild(rowElement);
             });
         }
 
@@ -612,18 +640,29 @@
 
         function filterTable() {
             const selectedConference = document.getElementById('conference-live-dropdown').value;
-            console.log('Selected conference:', selectedConference); // Check the selected value
+            console.log('Selected conference:', selectedConference);  // Debugging
 
             let filteredData;
 
             if (selectedConference === '') {
-                console.log('No filter, showing all data');
-                filteredData = allData;
+                filteredData = allData;  // No filtering
             } else {
-                filteredData = allData.filter(item => item.match.toLowerCase().includes(`(${selectedConference.toLowerCase()})`));
-                console.log('Filtered data:', filteredData); // Check the filtered results
+                filteredData = allData.filter(item => {
+                    const matchConferenceRegex = /\(([^)]+)\)/g;
+                    let matchConference;
+                    let found = false;
+                    while ((matchConference = matchConferenceRegex.exec(item.match)) !== null) {
+                        console.log('Found conference:', matchConference[1].trim());  // Debugging
+                        if (matchConference[1].trim().toLowerCase() === selectedConference.toLowerCase()) {
+                            found = true;
+                            break;
+                        }
+                    }
+                    return found;
+                });
             }
 
+            console.log('Filtered data:', filteredData);  // Debugging
             populateTable(filteredData);
         }
 
@@ -631,7 +670,7 @@
             fetch('https://test-api-42b6a9daeff2.herokuapp.com/')
                 .then(response => response.json())
                 .then(data => {
-                    allData = data.data; // Store all data globally
+                    allData = data.data;  // Store all data globally
                     populateTable(allData);
                     populateDropdown(allData);
                 })
@@ -649,6 +688,7 @@
             // Add event listener to the dropdown
             document.getElementById('conference-live-dropdown').addEventListener('change', filterTable);
         });
+
     </script>
 
     <!-- Script to run rankings tab -->
@@ -738,8 +778,6 @@
             const conferenceDropdown = document.getElementById(
                 "conference-ranking-dropdown"
             );
-            const teamDropdown = document.getElementById("teams-ranking-dropdown");
-
             const conferences = [
                 ...new Set(rankingsData.map((item) => item.Conf)),
             ].sort();
@@ -754,12 +792,6 @@
                 conferenceDropdown.appendChild(option);
             });
 
-            teams.forEach((team) => {
-                const option = document.createElement("option");
-                option.value = team;
-                option.textContent = team;
-                teamDropdown.appendChild(option);
-            });
         }
 
         function addSortListeners() {
@@ -851,6 +883,150 @@
         const today = new Date();
         document.getElementById("startDate").value = getFormattedDate(today, 6);
         document.getElementById("endDate").value = getFormattedDate(today, 1);
+    </script>
+
+    <!-- Script to populate Players table -->
+    <script>
+        async function fetchPlayersData() {
+            const response = await fetch(
+                "https://raw.githubusercontent.com/widbuntu/vbdb-info/refs/heads/main/data/test_sch.csv"
+            );
+            const csvText = await response.text();
+            const rows = csvText.split("\n").filter((row) => row.trim() !== "");
+            const dataRows = rows.slice(1);
+            scheduleData = dataRows.map((row) => {
+                const fields = splitLine(row);
+                return {
+                    date: fields[0] || "",
+                    match: fields[1] || "",
+                    results: fields[2] || "",
+                    box_score_url: fields[3] || "",
+                };
+            });
+            console.log("Schedule Data:", scheduleData);
+            populateScheduleTable(scheduleData);
+            populateDropdowns();
+        }
+
+        function populateScheduleTable(data) {
+            const tbody = document.querySelector("#schTable tbody");
+            tbody.innerHTML = "";
+            data.sort((a, b) => new Date(a.date) - new Date(b.date));
+            data.forEach((row) => {
+                const rowElement = document.createElement("tr");
+                rowElement.innerHTML = `
+            <td style="width:2%">${row.date.trim()}</td>
+            <td style="width:15%">${row.match.trim()}</td>
+            <td style="width:25%">${row.results.trim()} <a href="${row.box_score_url.trim()}" target="_blank">View</a></td>
+        `;
+                tbody.appendChild(rowElement);
+            });
+        }
+
+        function populateDropdowns() {
+            const conferenceDropdown = document.getElementById(
+                "conference-schedule-dropdown"
+            );
+            const teamDropdown = document.getElementById("teams-schedule-dropdown");
+
+            const conferences = [
+                ...new Set(
+                    scheduleData.map((item) =>
+                        item.match.split(" vs ")[0].split(" (")[0].trim()
+                    )
+                ),
+            ].sort();
+            const teams = [
+                ...new Set(
+                    scheduleData.flatMap((item) =>
+                        item.match.split(" vs ").map((team) => team.split(" (")[0].trim())
+                    )
+                ),
+            ].sort();
+
+            conferences.forEach((conf) => {
+                const option = document.createElement("option");
+                option.value = conf;
+                option.textContent = conf;
+                conferenceDropdown.appendChild(option);
+            });
+
+            teams.forEach((team) => {
+                const option = document.createElement("option");
+                option.value = team;
+                option.textContent = team;
+                teamDropdown.appendChild(option);
+            });
+        }
+
+        function filterTable() {
+            const selectedConference = document.getElementById(
+                "conference-schedule-dropdown"
+            ).value;
+            const selectedTeam = document.getElementById(
+                "teams-schedule-dropdown"
+            ).value;
+            const startDate = document.getElementById("startDate").value;
+            const endDate = document.getElementById("endDate").value;
+
+            const filteredData = scheduleData.filter((row) => {
+                const match = row.match.toLowerCase();
+                const selectedConferenceTrimmed = selectedConference
+                    .toLowerCase()
+                    .trim();
+                const selectedTeamTrimmed = selectedTeam.toLowerCase().trim();
+                const conferenceMatch =
+                    selectedConference === "Conference" ||
+                    match.includes(selectedConferenceTrimmed);
+                const teamMatch =
+                    selectedTeam === "School" || match.includes(selectedTeamTrimmed);
+
+                // Convert row.date to a Date object
+                const rowDate = new Date(row.date);
+
+                // Check if the rowDate is within the selected range
+                const dateMatch =
+                    (!startDate || rowDate >= new Date(startDate)) &&
+                    (!endDate || rowDate <= new Date(endDate));
+
+                return conferenceMatch && teamMatch && dateMatch;
+            });
+
+            populateScheduleTable(filteredData);
+        }
+
+        function splitLine(line) {
+            const result = [];
+            let currentField = "";
+            let inQuotes = false;
+            for (let char of line) {
+                if (char === '"') {
+                    inQuotes = !inQuotes;
+                } else if (char === "," && !inQuotes) {
+                    result.push(currentField.trim());
+                    currentField = "";
+                } else {
+                    currentField += char;
+                }
+            }
+            result.push(currentField.trim());
+            return result;
+        }
+
+        document
+            .getElementById("conference-schedule-dropdown")
+            .addEventListener("change", filterTable);
+        document
+            .getElementById("teams-schedule-dropdown")
+            .addEventListener("change", filterTable);
+        document
+            .getElementById("startDate")
+            .addEventListener("change", filterTable);
+        document
+            .getElementById("endDate")
+            .addEventListener("change", filterTable);
+
+        document.addEventListener("DOMContentLoaded", fetchScheduleData);
     </script>
 
 </body>
